#6 게시글 DB 에 날짜 추가

--- a/css/index.css
+++ b/css/index.css
@@ -17,3 +17,12 @@ pre {
     margin:0px;
     padding: 0px;
 }
+
+a {
+    color: #000;
+}
+
+a:hover {
+    color: blue;
+    text-decoration: none;
+}
