--- a/css/index.css
+++ b/css/index.css
@@ -6,14 +6,16 @@ body {
 
 .wrap {
     background: #FFF;
-    padding: 20px;
+    padding: 15px;
     box-shadow: 1px 1px 1px 1px #DDD;
+    margin-bottom: 15px;
+    margin-top:15px;
 }
 
 pre {
     border: none;
     background: none;
-    font-size: 15pt;
+    font-size: 12pt;
     margin:0px;
     padding: 0px;
 }
@@ -25,4 +27,24 @@ a {
 a:hover {
     color: blue;
     text-decoration: none;
+}
+
+.input-lg {
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+#type {
+    width: 25%;
+}
+
+#keyword {
+    width:73%;
 }
